--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -97,8 +97,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       {{ govukInsetText({
-        html: '<p class="govuk-body">' + project.commentary + '</p><div class="govuk-body-s govuk-!-margin-bottom-0 govuk-!-margin-top-2">Last updated: ' + project.lastUpdated + '</div>'
+        html: '<p class="govuk-body">' + project.commentary + '</p>'
       }) }}
+      
+      <p class="govuk-body-s govuk-!-margin-bottom-4 govuk-!-margin-top-1">Last updated: {{ project.lastUpdated }}</p>
 
       {% set overviewHtml %}
         {{ projectOverview(project) }}
