--- a/src/server/projects/detail/edit.njk
+++ b/src/server/projects/detail/edit.njk
@@ -66,37 +66,42 @@
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header">Date</th>
-            <th scope="col" class="govuk-table__header">Status</th>
-            <th scope="col" class="govuk-table__header">Commentary</th>
-            <th scope="col" class="govuk-table__header">Actions</th>
+            <th class="govuk-table__header">Date</th>
+            <th class="govuk-table__header">Status</th>
+            <th class="govuk-table__header">Commentary</th>
+            <th class="govuk-table__header">Actions</th>
           </tr>
         </thead>
         <tbody class="govuk-table__body">
-          {% for update in deliveryHistory %}
+          {% for entry in deliveryHistory %}
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">{{ update.timestamp | formatDate }}</td>
               <td class="govuk-table__cell">
-                {% if update.changes.status.to == "RED" %}
-                  <strong class="govuk-tag govuk-tag--red">{{ update.changes.status.to }}</strong>
-                {% elif update.changes.status.to == "AMBER" %}
-                  <strong class="govuk-tag govuk-tag--yellow">{{ update.changes.status.to }}</strong>
-                {% elif update.changes.status.to == "GREEN" %}
-                  <strong class="govuk-tag govuk-tag--green">{{ update.changes.status.to }}</strong>
+                {{ entry.timestamp | formatDate }}
+              </td>
+              <td class="govuk-table__cell">
+                {% if entry.changes.status.to == "RED" %}
+                  <strong class="govuk-tag govuk-tag--red">{{ entry.changes.status.to }}</strong>
+                {% elif entry.changes.status.to == "AMBER" %}
+                  <strong class="govuk-tag govuk-tag--yellow">{{ entry.changes.status.to }}</strong>
+                {% elif entry.changes.status.to == "GREEN" %}
+                  <strong class="govuk-tag govuk-tag--green">{{ entry.changes.status.to }}</strong>
                 {% else %}
-                  <strong class="govuk-tag">{{ update.changes.status.to }}</strong>
+                  <strong class="govuk-tag">{{ entry.changes.status.to }}</strong>
                 {% endif %}
               </td>
               <td class="govuk-table__cell">
-                {% if update.changes.commentary.to %}
-                  {{ update.changes.commentary.to | truncate(50) }}
+                {% if entry.changes.commentary.to %}
+                  {{ entry.changes.commentary.to | truncate(50) }}
                 {% else %}
                   <em>No commentary</em>
                 {% endif %}
               </td>
               <td class="govuk-table__cell">
-                <a href="/projects/{{ project.id }}/edit/delivery/{{ update.id }}" class="govuk-link">Edit</a> | 
-                <a href="/projects/{{ project.id }}/delete/delivery/{{ update.id }}" class="govuk-link govuk-link--no-visited-state">Remove</a>
+                <a
+                  href="/projects/{{ project.id }}/history/{{ entry.id }}/archive"
+                  class="govuk-link govuk-link--no-visited-state"
+                  >Archive</a
+                >
               </td>
             </tr>
           {% endfor %}
@@ -106,7 +111,7 @@
         <a href="/projects/{{ project.id }}/history" class="govuk-link">View all history</a>
       </p>
     {% else %}
-      <p class="govuk-body">No previous delivery updates found.</p>
+      <p class="govuk-body">No recent delivery updates</p>
     {% endif %}
   {% endset %}
 
@@ -176,7 +181,7 @@
         <tbody class="govuk-table__body">
           {% for profession in project.professions %}
             <tr class="govuk-table__row">
-              <td class="govuk-table__cell">{{ profession.name }}</td>
+              <td class="govuk-table__cell">{{ professionNames[profession.professionId] }}</td>
               <td class="govuk-table__cell">
                 {% if profession.status == "RED" %}
                   <strong class="govuk-tag govuk-tag--red">{{ profession.status }}</strong>
@@ -196,7 +201,6 @@
                 {% endif %}
               </td>
               <td class="govuk-table__cell">
-                <a href="/projects/{{ project.id }}/edit/profession/{{ profession.professionId }}" class="govuk-link">Edit</a> | 
                 <a href="/projects/{{ project.id }}/delete/profession/{{ profession.professionId }}" class="govuk-link govuk-link--no-visited-state">Remove</a>
               </td>
             </tr>
